--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -19,7 +19,7 @@ stages:
   is_completed: true
 - id: 389
   step: 6094
-  is_completed: false
+  is_completed: true
 topics:
   0:
   - title: Computer programming
